unpackaged/objects/Penny_Trail_Config__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether this trail config is currently active. Only active configs are returned by the GetTrailConfig Agentforce action. Set to False to disable without deleting.</description>
    <inlineHelpText>Check to make this config active. Only active configs are used by Penny. Uncheck to disable this trail config without deleting it.</inlineHelpText>
</CustomField>