unpackaged/objects/Penny_Trail_Config__c/fields/Trail_ID__c.field-meta.xml
<CustomField>
    <fullName>Trail_ID__c</fullName>
    <label>Trail ID</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
    <unique>true</unique>
    <description>Unique identifier for this trail persona. Values: guided_trail · explorer_journey · trail_of_mastery · community_alumni. Used by GetTrailConfig Agentforce action to look up the correct config.</description>
    <inlineHelpText>Enter the trail identifier exactly as used in the system. Values: guided_trail, explorer_journey, trail_of_mastery, community_alumni. Must be unique — only one config record per trail.</inlineHelpText>
</CustomField>